fixed the visibility toggle, added documentation.

--- a/index.css
+++ b/index.css
@@ -34,27 +34,34 @@ main {
     background-color: var(--color-background2);
     padding: 2rem 10%;
 }
-    main > section:first-of-type {
-        padding: 1% 20%;
-    }
-    main > section:first-of-type > p {
-        font-size: 2rem;
-    }
-    .select > p{
+    .container-rounds > p {
         font-size: 3rem;
-        margin: 1%;
     }
+    .buttons-rounds > button {
+        font-size: 6rem;
+        margin-top: 5%;
+        padding: 1% 5%;
+    }
+    .buttons-choices > button {
+        height: auto;
+        margin-top: 5%;
+        padding: 1% 1%;
+        width: 20%;
+    }
+    .buttons-choices > button > img {
+        height: auto;
+        width: 100%;
+    }
+    
 footer {
     background-color: var(--color-background1);
-    padding: 2% 10% 1% 10%;
+    padding: 1% 10% 1% 10%;
 }
     footer > p {
         font-size: 1.5rem;
     }
 /* ---------- */
-.hidden {
-    /* display: none; */
-}
+
 /* ---------- */
 a {
     color: inherit;
@@ -65,9 +72,7 @@ button {
     background-color: var(--color-button2);
     border: none;
     border-radius: 1rem;
-    font-size: 3rem;
     margin: 1% 3%;
-    padding: 1% 3%;
 }
 button:active {
     background-color: var(--color-button1);
